Added find feature
Signed-off-by: Beau Hastings <beausy@gmail.com>

--- a/NineDragons XSD Editor/NineDragons XSD Editor.csproj
+++ b/NineDragons XSD Editor/NineDragons XSD Editor.csproj
@@ -133,6 +133,9 @@
       <Name>ProgressIndicator</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\find.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
